--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,18 @@
     justify-content: center;
     gap: 10px;
 }
+
+.score-display {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    font-size: 40px;
+}
+
+#game-display {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    font-size: 40px;
+
+}
